apps/production/kanboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard
  namespace: kanboard
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: "traefik"
  rules:
  - host: kanboard.natetech.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanboard
            port:
              number: 80
  tls:
  - hosts:
    - kanboard.natetech.org
    secretName: kanboard-certificate-secret
